--- a/Lemon_Airlines/views/index.ejs
+++ b/Lemon_Airlines/views/index.ejs
@@ -7,5 +7,9 @@
   <body>
     <h1><%= title %></h1>
     <p>Welcome to <%= title %></p>
+
+    <a href="/flyers/new"> 
+      Add New Acct. 
+    </a>
   </body>
 </html>
