--- a/Lemon_Airlines/views/index.ejs
+++ b/Lemon_Airlines/views/index.ejs
@@ -11,5 +11,9 @@
     <a href="/flyers/new"> 
       Add New Acct. 
     </a>
+
+    <!-- <a href="/flights"> 
+      Open New Acct. 
+    </a> -->
   </body>
 </html>
