--- a/Lemon_Airlines/views/partials/header.ejs
+++ b/Lemon_Airlines/views/partials/header.ejs
@@ -10,9 +10,9 @@
 <body>
   <nav>
     <img src="">
-    <a href="/flights/new" <%- title === 'Add Flight' ? 'class="active"' : '' %>>ADD FLIGHT</a>
-    <a href="/buyers/new" <%- title === 'Add Buyer' ? 'class="active"' : '' %>>ADD VIEWER</a>
-    <a href="/buyers" <%- title === 'All Buyers' ? 'class="active"' : '' %>>ALL FLIGHTS</a>
+    <a href="/flyers/new" <%- title === 'Add Flight' ? 'class="active"' : '' %>>ADD FLIGHT</a>
+    <a href="/flights/new" <%- title === 'Add Flight' ? 'class="active"' : '' %>>ADD FLYER</a>
+    <a href="/flights" <%- title === 'All Flights' ? 'class="active"' : '' %>>ALL FLIGHTS</a>
   </nav>
   <main>
     <h1><%= title %></h1>
