--- a/Lemon_Airlines/views/flights/show.ejs
+++ b/Lemon_Airlines/views/flights/show.ejs
@@ -1,32 +1,31 @@
 <%- include('../partials/header') %>
 
 <section id="show-page">
-  <div>Title: </div>
-  <div><%= flight.airlines %></div>
-  <div>Release Year: </div>
-  <div><%= flight.releaseYear %></div>
-  <div>Rating: </div>
-  <div><%= flight.mpaaRating %></div>
-  <div>Now Showing: </div>
-  <div><%= flight.nowShowing ? 'Yes' : 'Nope' %></div>
-  <div>Cast:</div>
-  <ul>
-    <%- flight.cast.map(p => 
-      `<li>${p.name} <small>${p.born.toLocaleDateString()}</small></li>`
+  <div> Ticket ID Number: <%= flight.id.substr(5,5) %> </div>
+  <div> Airlines: <%= flight.airlines %> </div>
+  <div> Flight Number: <%= flight.flightNum %> </div>
+  <div> Airport: <%= flight.airport %> </div>
+  <!-- <div> Destination: <%= flight.destination %> </div> -->
+  <div> Departs: <%= flight.departs %> </div>
+  <div> Cast:
+    <ul>
+      <%- flight.cast.map(f => 
+      `<li>${f.name} <small>${f.departs.toLocaleDateString()}</small></li>`
     ).join('') %>
-  </ul>
+    </ul>
+  </div>
 </section>
 
-<form id="add-per-to-cast" action="/flights/<%= flight._id%>/performers" method="POST">
-  <select name="performerId">
-    <%- performers.map(p => `<option value="${p._id}">${p.name}</option>`).join('') %>
+<form id="add-per-to-cast" action="/flights/<%= flight._id%>/flyers" method="POST">
+  <select name="flyerId">
+    <%- flyers.map(f => `<option value="${f._id}">${f.name}</option>`).join('') %>
   </select>
-  <button type="submit">Add to Cast</button>
+  <button type="submit">Add to Family Discount</button>
 </form>
 
-<br><br><h2>Reviews</h2>
-<form id="add-review-form" method="POST"
-  action="/flights/<%= flight._id %>/reviews">
+<br><br>
+<h2>Reviews</h2>
+<form id="add-review-form" method="POST" action="/flights/<%= flight._id %>/reviews">
   <label>Review:</label>
   <textarea name="content"></textarea>
   <label>Rating:</label>
@@ -41,33 +40,32 @@
 </form>
 
 <% if (flight.reviews.length) { %>
-  <table>
-    <thead>
-      <tr>
-      	 <th>Date</th>
-        <th>Review</th>
-        <th>Rating</th>
-      </tr>
-    </thead>
-    <tbody>
-      <% let total = 0 %>
-      <% flight.reviews.forEach(function(r) { %>
-        <% total += r.rating %>
-        <tr>
-          <td><%= r.createdAt.toLocaleDateString() %></td>
-          <td><%= r.content %></td>
-          <td><%= r.rating %></td>
-        </tr>
-        <% }); %>
-        <tr>
-          <td colspan="2"></td>
-          <td><strong><%= (total / flight.reviews.length).toFixed(1) %></strong></td>
-        </tr>
-    </tbody>
-  </table>
+<table>
+  <thead>
+    <tr>
+      <th>Date</th>
+      <th>Review</th>
+      <th>Rating</th>
+    </tr>
+  </thead>
+  <tbody>
+    <% let total = 0 %>
+    <% flight.reviews.forEach((r) => { %>
+    <% total += r.rating %>
+    <tr>
+      <td><%= r.createdAt.toLocaleDateString() %></td>
+      <td><%= r.content %></td>
+      <td><%= r.rating %></td>
+    </tr>
+    <% }); %>
+    <tr>
+      <td colspan="2"></td>
+      <td><strong><%= (total / flight.reviews.length).toFixed(1) %></strong></td>
+    </tr>
+  </tbody>
+</table>
 <% } else { %>
-  <h5>No Reviews Yet</h5>
+<h5>No Reviews Yet</h5>
 <% } %>
-
 
 <%- include('../partials/footer') %>
