--- a/Lemon_Airlines/views/partials/header.ejs
+++ b/Lemon_Airlines/views/partials/header.ejs
@@ -10,8 +10,8 @@
 <body>
   <nav>
     <img src="">
-    <a href="/flyers/new" <%- title === 'Add Flight' ? 'class="active"' : '' %>>ADD FLIGHT</a>
-    <a href="/flights/new" <%- title === 'Add Flight' ? 'class="active"' : '' %>>ADD FLYER</a>
+    <a href="/flyers/new" <%- title === 'Add Flyer' ? 'class="active"' : '' %>>ADD FLYER</a>
+    <a href="/flights/new" <%- title === 'Add Flight' ? 'class="active"' : '' %>>ADD FLIGHT</a>
     <a href="/flights" <%- title === 'All Flights' ? 'class="active"' : '' %>>ALL FLIGHTS</a>
   </nav>
   <main>
