--- a/Lemon_Airlines/views/flyers/new.ejs
+++ b/Lemon_Airlines/views/flyers/new.ejs
@@ -4,7 +4,7 @@
   <select>
     <% flyers.forEach((f) => { %>
       <option>
-        <%= f.name %> from (<%= f.airport %>)
+        <%= f.name %> from <%= f.airport %>
       </option>
     <% }) %>
   </select>
@@ -15,6 +15,16 @@
 
   <label>Departure Date:</label>
   <input type="datetime-local" name="departs">
+
+  <label>Airport</label>
+  <select name="airport">
+    <option value="AUS">AUS</option>
+    <option value="DFW">DFW</option>
+    <option value="DEN">DEN</option>
+    <option value="LAX">LAX</option>
+    <option value="SAN">SAN</option>
+  </select>
+  
 
   <input class="btn" type="submit" value="Add Flyer">
 </form>
