--- a/Lemon_Airlines/views/flights/show.ejs
+++ b/Lemon_Airlines/views/flights/show.ejs
@@ -9,8 +9,8 @@
   <div class="odd"> <%= flight.flightNum %> </div>
   <div> Airport: </div>
   <div class="odd"> <%= flight.airport %> </div>
-  <div> Destination: </div>
-  <div class="odd"> <%= flight.airport2 %> </div>
+  <div> Seat: </div>
+  <div class="odd"> <%= flight.seat %> </div>
   <div> Departs: </div>
   <div class="odd"> <%= flight.departs %> </div>
   <div> Cast: </div>
