--- a/Lemon_Airlines/views/flights/edit.ejs
+++ b/Lemon_Airlines/views/flights/edit.ejs
@@ -2,43 +2,46 @@
 
 <form id="editForm" action="/flights/<%= flight.id %>?_method=PUT" method="POST" autocomplete="on">
   <div>
-    <label>Airline:</label>
-    <select name="airlines">
-      <option value="American">American</option>
-      <option value="Southwest">Southwest</option>
-      <option value="United">United</option>
-    </select>
+    <div class="editFlex">
+      <label>Airline:</label>
+      <select name="airlines">
+        <option value="American">American</option>
+        <option value="Southwest">Southwest</option>
+        <option value="United">United</option>
+      </select>
+    </div>
 
-  <div>
-    <label>Airport</label>
-    <select name="airport">
-      <option value="AUS">AUS</option>
-      <option value="DFW">DFW</option>
-      <option value="DEN">DEN</option>
-      <option value="LAX">LAX</option>
-      <option value="SAN">SAN</option>
-    </select>
-  </div>
 
-  <div>
-    <label>Flight Number</label>
-    <input type="text" name="flightNum" value="<%= flight.flightNum %>">
-  </div>
+    <div class="editFlex">
+      <label>Airport:</label>
+      <select name="airport">
+        <option value="AUS">AUS</option>
+        <option value="DFW">DFW</option>
+        <option value="DEN">DEN</option>
+        <option value="LAX">LAX</option>
+        <option value="SAN">SAN</option>
+      </select>
+    </div>
 
-  <div>
-    <label>Destination</label>
-    <select name="destination">
-      <option value="AUS">AUS</option>
-      <option value="DFW">DFW</option>
-      <option value="DEN">DEN</option>
-      <option value="LAX">LAX</option>
-      <option value="SAN">SAN</option>
-    </select>
-  </div>
+    <div class="editFlex">
+      <label>Flight Number:</label>
+      <input type="text" name="flightNum" value="<%= flight.flightNum %>">
+    </div>
 
-  <div>
-    <input type="submit" value="Update Flights">
-  </div>
+    <div class="editFlex">
+      <label>Destination:</label>
+      <select name="destination">
+        <option value="AUS">AUS</option>
+        <option value="DFW">DFW</option>
+        <option value="DEN">DEN</option>
+        <option value="LAX">LAX</option>
+        <option value="SAN">SAN</option>
+      </select>
+    </div>
+
+    <div class="editFlex">
+      <input type="submit" value="Update Flights">
+    </div>
 </form>
 
 <%- include('../partials/footer') %>
