fixed Add Flyer

--- a/Lemon_Airlines/views/flights/edit.ejs
+++ b/Lemon_Airlines/views/flights/edit.ejs
@@ -29,6 +29,12 @@
     </div>
 
     <div class="editFlex">
+      <label>Seat</label>
+      <input name="seat" required pattern="[A-F][1-9]\d?" value="ex. A25">
+    </div>
+
+
+    <div class="editFlex">
       <label>Destination:</label>
       <select name="destination">
         <option value="AUS">AUS</option>
