--- a/Lemon_Airlines/views/flights/new.ejs
+++ b/Lemon_Airlines/views/flights/new.ejs
@@ -32,6 +32,9 @@
     <option value="SAN">SAN</option>
   </select>
 
+  <label>Seat</label>
+  <input name="seat" required pattern="[A-F][1-9]\d?" value="ex. A25">
+
   <input type="submit" value="Add Flight">
 </form>
 
